--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href='http://fonts.googleapis.com/css?family=Lobster+Two:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 
   <title>Suit Up! CSS Framework</title>
